--- a/tomcat5/src/org/netbeans/modules/tomcat5/ide/Bundle.properties
+++ b/tomcat5/src/org/netbeans/modules/tomcat5/ide/Bundle.properties
@@ -15,3 +15,5 @@
 MSG_TomcatExecutionCommand=Tomcat Execution Process
 MSG_createBaseDir=Creating configuration files and directories...
 MSG_startProcess=Starting Tomcat process...
+
+MSG_notStarting=Starting of Tomcat not supported for this server.
