--- a/o.n.core/src/org/netbeans/core/actions/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/actions/Bundle.properties
@@ -157,4 +157,4 @@ CTL_ViewFilesystemsTabAction=Fi&lesystems
 CTL_ViewRuntimeTabAction=Run&time
 
 # RefreshAllFilesystemsAction
-LAB_refresh_all_filesystems=&Refresh All Filesystems
+LAB_refresh_all_filesystems=&Refresh All
