More useful error message from ColorEditor.setAsText - I'm working on the bad value handling for the new property sheet, and if you type in "purple", it's not too useful to have a dialog box pop up that just says "Purple.  OK?"

--- a/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
@@ -23,6 +23,8 @@ CTL_AWTPalette=AWT Palette
 CTL_SwingPalette=Swing Palette
 CTL_SystemPalette=System Palette
 ACSD_CustomColorEditor=N/A
+FMT_IllegalEntry="{0}" is not a valid color identifier.  You may enter Swing or AWT constants or red/green/blue values.
+
 # ColorEditor:AWT color names
 LAB_White=white
 LAB_LightGray=lightGray
