Bundle consistency fix.

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -127,8 +127,8 @@ PROP_WWW_BROWSER=Web Browser
 HINT_WWW_BROWSER=The browser used to display WWW pages.
 PROP_UI_Mode=UI Mode
 HINT_UI_Mode=UI Mode
-PROP_MINI_STATUS_BAR_STATE=Ministatus bar state.
-HINT_MINI_STATUS_BAR_STATE=Ministatus bar state.
+PROP_MINI_STATUS_BAR_STATE=Show Mini Status Bar
+HINT_MINI_STATUS_BAR_STATE=If True, a small status bar is shown in the Explorer.
 
 
 #LoaderPoolNode
