Bugfix #33410: Only label for popup menu presenter is changed to "Refresh All".

--- a/o.n.core/src/org/netbeans/core/actions/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/actions/Bundle.properties
@@ -157,4 +157,6 @@ CTL_ViewFilesystemsTabAction=Fi&lesystems
 CTL_ViewRuntimeTabAction=Run&time
 
 # RefreshAllFilesystemsAction
-LAB_refresh_all_filesystems=&Refresh All
+LAB_refresh_all_filesystems=&Refresh All Filesystems
+# Label for popup presenter
+LAB_refresh_all_filesystems_popup=&Refresh All
