--- a/diff/build.xml
+++ b/diff/build.xml
@@ -29,20 +29,22 @@ Microsystems, Inc. All Rights Reserved.
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="${nbext}/nbantext.jar"/>
   <taskdef name="makelayer" classname="org.netbeans.nbbuild.MakeLayer" classpath="${nbext}/nbantext.jar"/>
 
-  <target name="compile">
-    <javac srcdir="src" 
-        deprecation="${build.compiler.deprecation}" 
-        debug="${build.compiler.debug}"
-        destdir="src">
-      <classpath>
-        <pathelement location="../editor/netbeans/modules/ext/nb-editor.jar"/>
-	<pathelement location="${nbroot}/openide/openide-13javac-workaround.jar"/>
+  <path id="cp">
+    <pathelement location="../editor/netbeans/modules/ext/nb-editor.jar"/>
+        <pathelement location="${nbroot}/openide/openide-13javac-workaround.jar"/>
         <pathelement location="../openide/netbeans/lib/openide.jar"/>
         <pathelement location="../openide/loaders/netbeans/lib/openide-loaders.jar"/>
         <fileset dir="${nbroot}/libs/external">
           <include name="regexp*.jar"/>
         </fileset>
-      </classpath>
+  </path>
+
+  <target name="compile">
+    <javac srcdir="src" 
+        deprecation="${build.compiler.deprecation}" 
+        debug="${build.compiler.debug}"
+        destdir="src">
+      <classpath refid="cp"/>
     </javac>
   </target>
 
@@ -74,59 +76,22 @@ Microsystems, Inc. All Rights Reserved.
     </makenbm>
   </target>
 
-  <target name="javadoc" depends="diff-apis">
-    <copy todir="javadoc">
-      <fileset dir=".">
-        <include name="DiffAPIs/**"/>
-        <include name="DiffAPIs.zip"/>
-      </fileset>
-    </copy>
+  <target name="javadoc">
+    <!-- Ant 1.4 bug workaround: <property refid="..."/> does not work inside <ant> -->
+    <property name="_cp" refid="cp"/>
+    <ant dir="${nbroot}/nbbuild/javadoctools" antfile="template.xml" target="javadoc">
+      <property name="javadoc.base" location="."/>
+      <property name="javadoc.name" value="DiffAPI"/>
+      <property name="javadoc.title" value="Diff API"/>
+      <property name="javadoc.packages" value="org.netbeans.api.diff,org.netbeans.spi.diff"/>
+      <property name="javadoc.classpath" value="${_cp}"/>
+      <property name="javadoc.apichanges" location="api/doc/changes/apichanges.xml"/>
+    </ant>
   </target>
 
-  <!-- Diff API documentation -->
-  <target name="diff-apis" description="Create Diff API documentation.">
-    <property name="jdk-docs-location" value="http://java.sun.com/j2se/1.3/docs/api"/>
-    <property name="openide-docs-location" value="http://www.netbeans.org/download/apis/"/>
-    <property name="openide.package-list.loc" location="api/doc/openide"/>
-    <echo message="Build Diff API documentation..."/>
-    <delete dir="DiffAPIs"/>
-    <mkdir dir="DiffAPIs"/>
-    <javadoc destdir="DiffAPIs"
-             packagenames="org.netbeans.api.diff,org.netbeans.spi.diff"
-             doctitle="NetBeans Diff APIs"
-             use="true"
-             splitindex="true"
-             author="false"
-             version="false"
-             maxmemory="64m"
-    >
-      <sourcepath>
-        <pathelement location="api/doc"/>
-        <pathelement location="src"/>
-      </sourcepath>
-      <classpath>
-        <fileset dir="${nbroot}/openide/netbeans/lib">
-          <include name="openide*.jar" />
-        </fileset>
-        <fileset dir="${nbroot}/core/external">
-          <include name="regexp*.jar"/>
-        </fileset>
-      </classpath>
-      <link href="${jdk-docs-location}"
-            offline="true"
-            packagelistLoc="${nbroot}/openide/api/doc"
-      />
-      <link href="${openide-docs-location}"
-            offline="true"
-            packagelistLoc="${openide.package-list.loc}"
-      />
-    </javadoc>
-    <zip zipfile="DiffAPIs.zip" basedir="DiffAPIs"/>
-  </target>
 
   <target name="clean">
     <delete dir="javadoc"/>
-    <delete dir="DiffAPIs"/>
     <delete>
       <fileset dir="src">
         <include name="**/*.class"/>
