--- a/installer/mac/newbuild/Bundle.properties
+++ b/installer/mac/newbuild/Bundle.properties
@@ -50,6 +50,10 @@ php-title=PHP
 php-tooltip=PHP
 php-description=PHP
 
+webcommon-title=Common Web Components
+webcommon-tooltip=Common Web Components
+webcommon-description=Common Web Components
+
 soa-title=SOA
 soa-tooltip=SOA
 soa-description=Tools for creating composite applications as part of a Service Oriented Architecture. Provides comprehensive BPEL support. Includes graphical editor, debugger, and refactoring support.
