--- a/java.editor/src/org/netbeans/modules/editor/java/Bundle.properties
+++ b/java.editor/src/org/netbeans/modules/editor/java/Bundle.properties
@@ -85,7 +85,7 @@ opening-element=Opening {0}...
 NJFI_CLASS_ALREADY_IMPORTED=Class \"{0}\" is already imported.
 NJFI_PACKAGE_ALREADY_IMPORTED=Package \"{0}\" is already imported.
 
-java-desc-goto-help=Goto Javadoc
+java-desc-goto-help=Go to Javadoc
 popup-expand-all-javadoc-folds=Expand All J&avadoc
 popup-collapse-all-javadoc-folds=Collapse All &Javadoc
 popup-expand-all-code-block-folds=Expand All Java C&ode
