update test project to help reproducing issue #139048

--- a/websvc.kit/test/qa-functional/data/projects/Sample/nbproject/project.properties
+++ b/websvc.kit/test/qa-functional/data/projects/Sample/nbproject/project.properties
@@ -18,7 +18,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.jaxws21.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
