--- a/installer/engine/src/org/netbeans/installer/wizard/components/panels/netbeans/Bundle.properties
+++ b/installer/engine/src/org/netbeans/installer/wizard/components/panels/netbeans/Bundle.properties
@@ -116,7 +116,7 @@ NPoISP.message.metrics.text.content.type=text/html
 NPoISP.message.metrics.text=<html>\
                             The usage statistics will help the development team to better understand user requirements and prioritize improvements in future releases.\
                             There is no absolutely no way to reverse-engineer the collected data to find specific details concerning your projects.\
-                            See <a href="http://wiki.netbeans.org/">more information</a>.
+                            See <a href="http://www.netbeans.org/about/usage-tracking.html">more information</a>.
 
 NPoISP.message.text.success.uninstall=<html>Uninstallation completed successfully.</html>
 #NOI18N
