Refinement of #371dda4039e8 to not break unit tests for standalone modules. (Cf. #136621.)

--- a/apisupport.harness/release/build.xml
+++ b/apisupport.harness/release/build.xml
@@ -143,7 +143,7 @@ made subject to such option by the copyright holder.
         <property name="javahelp.search" value="JavaHelpSearch"/>
     </target>
 
-    <target name="test-lib-init" depends="init">
+    <target name="test-lib-init" depends="init,-delete-suite-masks">
         <path id="test.unit.lib.cp">
             <pathelement path="${test.unit.lib.cp}"/> <!-- for manual override -->
             <!-- As a fallback for old platforms which do not include the right modules: -->
@@ -154,6 +154,8 @@ made subject to such option by the copyright holder.
                 <include name="*/modules/ext/junit-*.jar"/>
             </fileset>
         </path>
+    </target>
+    <target name="-delete-suite-masks" if="suite.dir">
         <!-- NbModuleSuite must be made to ignore disabled.modules during a test; see discussion in #136621: -->
         <delete>
             <fileset dir="${suite.dir}">
