--- a/db.dataview/src/org/netbeans/modules/db/dataview/output/Bundle.properties
+++ b/db.dataview/src/org/netbeans/modules/db/dataview/output/Bundle.properties
@@ -101,7 +101,7 @@ InsertRecordDialog.AccessibleContext.accessibleDescription=This is the dialog wh
 InsertRecordDialog.jEditorPane1.AccessibleContext.accessibleDescription=text/sql
 InsertRecordDialog.previewBtn.text=Show SQL
 InsertRecordDialog.jTextArea1.text=Enter values for the following columns that were found in the table.Time and date values must match the ISO date and time format. Press CTRL+0 to make a column NULL.
-InsertRecordDialog.title=Enter values to insert into table
+InsertRecordDialog.title=Insert Record
 InsertRecordDialog.jEditorPane1.toolTipText=Generated SQL for INSERT
 InsertRecordDialog.jEditorPane1.contentType=text/sql
 InsertRecordDialog.cancelBtn.text=Cancel
