--- a/vmd.midpnb/src/org/netbeans/modules/vmd/midpnb/producers/Bundle.properties
+++ b/vmd.midpnb/src/org/netbeans/modules/vmd/midpnb/producers/Bundle.properties
@@ -82,6 +82,9 @@ TTIP_SVG_Menu=org.netbeans.microedition.svg.SVGMenu
 DISP_SVG_Form=SVG form
 TTIP_SVG_Form=org.netbeans.microedition.svg.SVGForm
 
+DISP_SVG_FormComponent=SVG form component
+TTIP_SVG_FormComponent=org.netbeans.microedition.svg.SVGComponent
+
 DISP_SVG_Splash_Screen=SVG Splash Screen
 TTIP_SVG_Splash_Screen=org.netbeans.microedition.svg.SVGSplashScreen
 
