--- a/libs.svnClientAdapter/nbproject/project.properties
+++ b/libs.svnClientAdapter/nbproject/project.properties
@@ -40,7 +40,7 @@
 is.autoload=true
 
 release.external/svnClientAdapter-1.4.0.jar=modules/ext/svnClientAdapter-1.4.0.jar
-release.external/svnjavahl.jar=modules/ext/svnjavahl.jar
+release.external/svnjavahl-1.5.0.jar=modules/ext/svnjavahl-1.5.0.jar
 
 # Hidden class found: org.tigris.subversion.svnclientadapter.commandline.CommandLine$CmdArguments in method protected byte[] org.tigris.subversion.svnclientadapter.commandline.SvnCommandLine.execBytes(org.tigris.subversion.svnclientadapter.commandline.CommandLine$CmdArguments,boolean) throws java.lang.Exception in class org.tigris.subversion.svnclientadapter.commandline.SvnCommandLine
 # Hidden class found: org.tigris.subversion.svnclientadapter.commandline.CommandLine$CmdArguments in method protected java.lang.String org.tigris.subversion.svnclientadapter.commandline.SvnAdminCommandLine.execString(org.tigris.subversion.svnclientadapter.commandline.CommandLine$CmdArguments,boolean) throws java.lang.Exception in class org.tigris.subversion.svnclientadapter.commandline.SvnAdminCommandLine
