Wizards for new file with PHP class, interface

--- a/php.project/src/org/netbeans/modules/php/project/ui/wizards/Bundle.properties
+++ b/php.project/src/org/netbeans/modules/php/project/ui/wizards/Bundle.properties
@@ -41,6 +41,8 @@ Templates/Project/PHP/PHPProject.php=PHP Application
 Templates/Scripting=Scripting
 Templates/Scripting/EmptyPHP.php=PHP File
 Templates/Scripting/EmptyPHPWebPage.php=PHP Web Page
+Templates/Scripting/PHPClass.php=PHP Class
+Templates/Scripting/PHPInterface.php=PHP Interface
 
 # new PHP project
 TXT_PhpProject=PHP Project
