stable test configs

--- a/web.jsf/nbproject/project.properties
+++ b/web.jsf/nbproject/project.properties
@@ -57,3 +57,7 @@ test.qa-functional.cp.extra=\
 release.external/shale-remoting-1.0.4.jar=modules/ext/shale-remoting-1.0.4.jar
 
 jnlp.indirect.jars=modules/ext/shale-remoting-1.0.4.jar
+
+test.config.stable.includes=\
+**/*Test.class
+
