--- a/web.struts/nbproject/project.properties
+++ b/web.struts/nbproject/project.properties
@@ -61,3 +61,7 @@ test.unit.run.cp.extra=\
     ${openide.modules.dir}/lib/org-openide-modules.jar:\
     ${openide.options.dir}/modules/org-openide-options.jar:\
     ${editor.fold.dir}/modules/org-netbeans-modules-editor-fold.jar
+
+test.config.stable.includes=\
+**/*Test.class
+
