--- a/j2ee.kit/nbproject/project.properties
+++ b/j2ee.kit/nbproject/project.properties
@@ -39,9 +39,12 @@
 
 javac.source=1.5
 test.config.stable.includes=\
-**/EJBValidation.class
+**/EJBValidation.class,**/AppServerTest.class,**/GenerateEntityClassesTest.class,\
+**/J2eeProjectsTest.class,**/EjbModuleTest.class,**/EBDetailsAndCMPFieldPanelTest.class,\
+**/EBGeneralAndClassPanelTest.class,**/CMPRelationshipsTest.class,**/WebProjectDDTest.class,\
+**/EntityRelations.class,**/PersistenceUnitTest.class
 test.config.validation.includes=\
-**/EJBValidation.class,**/AppServerTest.class**/GenerateEntityClassesTest.class,\
+**/EJBValidation.class,**/AppServerTest.class,**/GenerateEntityClassesTest.class,\
 **/J2eeProjectsTest.class,**/EjbModuleTest.class,**/EBDetailsAndCMPFieldPanelTest.class,\
 **/EBGeneralAndClassPanelTest.class,**/CMPRelationshipsTest.class,**/WebProjectDDTest.class,\
 **/EntityRelations.class,**/PersistenceUnitTest.class
