--- a/web.core.syntax/nbproject/project.properties
+++ b/web.core.syntax/nbproject/project.properties
@@ -50,7 +50,9 @@ javadoc.arch=${basedir}/arch.xml
 spec.version.base=2.1.0
 test.qa-functional.run.cp.extra=${nb_all}/languages/test/lib/tests-qa-functional.jar
 test.config.functional_validation.includes=**/CssCompletionTest.class,\
-**/IndentationTest.class,**/ReformatingTest.class,**/AutoCompletionTest.class,**/CompletionTest.class,\
+**/IndentationTest.class,**/ReformatingTest.class,**/AutoCompletionTest.class,**/CompletionTest.class
+test.config.stable.includes=**/CssCompletionTest.class,\
+**/IndentationTest.class,**/ReformatingTest.class,**/AutoCompletionTest.class,**/CompletionTest.class
 
 test.config.functional.includes=\
 **/StableSuiteTest.class,**/AnnotationsTest.class,\
