--- a/javascript.libraries/src/org/netbeans/modules/javascript/libraries/resources/Bundle.properties
+++ b/javascript.libraries/src/org/netbeans/modules/javascript/libraries/resources/Bundle.properties
@@ -1,5 +1,5 @@
-OpenIDE-Module-Name=JavaScript Library Support
-OpenIDE-Module-Short-Description=JavaScript Library Support
+OpenIDE-Module-Name=JavaScript Library Manager 
+OpenIDE-Module-Short-Description=JavaScript Library Manager 
 OpenIDE-Module-Display-Category=Web & Java EE
 OpenIDE-Module-Long-Description=\
-	This plugin provides the support for JavaScript Libraries
+	This plugin provides library management support for including JavaScript in NetBeans projects. 
