#138739 - Tool tips for badged nodes

--- a/mercurial/src/org/netbeans/modules/mercurial/Bundle.properties
+++ b/mercurial/src/org/netbeans/modules/mercurial/Bundle.properties
@@ -65,6 +65,21 @@ deletedLocallyFormat = <font color="#999999">{0}</font>{1}
 conflictFormat = <font color="#FF0000">{0}</font>{1} 
 #FF0000 red
 
+#{0} represents status text
+excludedTooltipFormat = <font color="#999999">{0}</font>
+#999999 grey
+newLocallyTooltipFormat = <font color="#008000">{0}</font>
+addedLocallyTooltipFormat = <font color="#008000">{0}</font>
+#008000 green
+modifiedLocallyTooltipFormat = <font color="#0000FF">{0}</font>
+#0000FF blue
+removedLocallyTooltipFormat = <font color="#999999">{0}</font>
+#999999 grey
+deletedLocallyTooltipFormat = <font color="#999999">{0}</font>
+#999999 grey
+conflictTooltipFormat = <font color="#FF0000">{0}</font>
+#FF0000 red
+
 CTL_FileInfoStatus_Unknown = Unknown
 CTL_FileInfoStatus_Excluded = Ignored
 
@@ -150,6 +165,12 @@ MSG_Fetch_20_Revisions = Fetch up to 20 Revisions...
 MSG_Fetch_50_Revisions = Fetch up to 50 Revisions...
 MSG_Fetch_All_Revisions = Fetch All Revisions...
 MSG_Fetching_Revisions = Fetching Revisions...
+
+MSG_Package_Modified_Locally = The package or folder contains files that were modified locally
+MSG_Package_Contains_Conflicts = The package or folder contains files that are in conflict with those in the repository
+
+MSG_Package_Modified_Locally = The package or folder contains files that were modified locally
+MSG_Package_Contains_Conflicts = The package or folder contains files that are in conflict with those in the repository
 
 # Exception Handler
 CTL_Action_OK = OK
