--- a/cnd.remote/src/org/netbeans/modules/cnd/remote/server/Bundle.properties
+++ b/cnd.remote/src/org/netbeans/modules/cnd/remote/server/Bundle.properties
@@ -35,5 +35,8 @@
 # 
 # Portions Copyrighted 2008 Sun Microsystems, Inc.
 
+TITLE_AddNewServer=Add New Server
+BTN_OK=OK
+
 ERR_DirectorySetupFailure=Failure during remote setup of {0}. Mkdir failed with an exit status of {1}.
 ERR_UpdateSetupFailure=Failure during remote setup of {0}. Could not copy {1} to the remote system.
