--- a/jumpto/src/org/netbeans/modules/jumpto/symbol/Bundle.properties
+++ b/jumpto/src/org/netbeans/modules/jumpto/symbol/Bundle.properties
@@ -34,8 +34,8 @@
 # Contributor(s):
 # 
 # Portions Copyrighted 2008 Sun Microsystems, Inc.
-DLG_GoToSymbol=Go To Symbol
-TXT_GoToSymbol=Go To Symbol...
+DLG_GoToSymbol=Go to Symbol
+TXT_GoToSymbol=Go to Symbol...
 CTL_OK=OK
 AN_GoToSymbol=N/A
 AD_GoToSymbol=N/A
