Tuning badging icons' tooltips to follow the UI spec more closely.

--- a/java.source/src/org/netbeans/modules/java/source/tasklist/Bundle.properties
+++ b/java.source/src/org/netbeans/modules/java/source/tasklist/Bundle.properties
@@ -67,4 +67,5 @@ ACD_EnableDependencies=Turn dependencies in Java Task List on or off
 
 ACD_EnableErrorBadges=Turn error badging on or off
 
-TP_ErrorBadge=Contains compilation errors
+TP_ErrorBadgeSingle=Error parsing file.
+TP_ErrorBadgeFolder=Contains files with errors.
