--- a/hibernate/src/org/netbeans/modules/hibernate/hqleditor/ui/Bundle.properties
+++ b/hibernate/src/org/netbeans/modules/hibernate/hqleditor/ui/Bundle.properties
@@ -60,3 +60,7 @@ HQLEditorTopComponent.setMaxRowCountLabel.text=Set Max. Row Count:
 setMaxRowToolTip=Set the Maximum number of rows to fetch
 showSQLTooltipText=Show SQL
 showResultTooltipText=Show Query Execution Result
+#On-the-fly SQL messages
+MalformedQuery=Invalid Query.
+DbError=Unable to retrieve data from the database.
+GeneralError=General Error
