Redesign of new PHP project wizard
Some functionality is still missing.

--- a/php.project/src/org/netbeans/modules/php/project/ui/wizards/Bundle.properties
+++ b/php.project/src/org/netbeans/modules/php/project/ui/wizards/Bundle.properties
@@ -55,6 +55,13 @@ TXT_DefaultProjectName=PhpProject{0}
 LBL_NewPhpProjectWizardIterator_WizardProgress_CreatingProject=Creating new project
 LBL_NewPhpProjectWizardIterator_WizardProgress_CreatingIndexFile=Creating index file
 LBL_NewPhpProjectWizardIterator_WizardProgress_PreparingToOpen=Preparing new project to be opened
+
+# project folder
+LBL_SeparateProjectFolder=Put NetBeans metadata into a separate directory
+LBL_MetadataFolder=&Metadata Folder:
+TXT_MetadataInfo=In order to correctly run, debug etc. project, NetBeans needs to store project metadata in a folder.
+
+
 LBL_ProjectName=Project &Name:
 LBL_ProjectFolder=Project &Folder:
 LBL_CreatedProjectFolder=Project Fol&der:
