Preparing to provide UI for switching the PHP hints on and off

--- a/php.editor/src/org/netbeans/modules/php/editor/verification/Bundle.properties
+++ b/php.editor/src/org/netbeans/modules/php/editor/verification/Bundle.properties
@@ -36,6 +36,9 @@
 # However, if you add GPL Version 2 code and therefore, elected the GPL
 # Version 2 license, then the option applies only if the new code is
 # made subject to such option by the copyright holder.
+CTL_Hints_DisplayName=Code Verification
+CTL_Hints_ToolTip=Hints And Warinings for PHP Code
+
 ImproperFieldAccessDesc=Improper field access.
 ClassNotFoundHintDesc=Class not found.
 AccidentalAssignementDesc=Possible accidental assignement, assignements in conditions should be avoided.
