webcommon cluster was missing from module list. Thus it was being built as NBMs by nbms-and-javadoc; thus causing http://deadlock.netbeans.org/hudson/job/nbms-and-javadoc/lastBuild/testReport/org.netbeans.nbbuild/VerifyUpdateCenter/synchronicConsistency/ Inconsistency(ies) in file:/hudson/workdir/jobs/nbms-and-javadoc/workspace/nbbuild/nbms/updates.xml Problems found for module org.netbeans.modules.javascript.libraries.api: [module is autoload but would not be enabled] Also removing contrib/looks from Javadoc list; not generally being built anyway.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -109,6 +109,7 @@ config.modules.stable=\
     ${nb.cluster.ide},\
     ${nb.cluster.apisupport},\
     ${nb.cluster.java},\
+    ${nb.cluster.webcommon},\
     ${nb.cluster.j2ee},\
     ${nb.cluster.xml},\
     ${nb.cluster.visualweb},\
@@ -268,7 +269,6 @@ config.javadoc.friend=\
 config.javadoc.experimental=\
     o.n.bootstrap,\
     core.startup,\
-    contrib/looks,\
     contrib/registry,\
     contrib/core.registry,\
     contrib/convertor,\
