--- a/spi.quicksearch/src/org/netbeans/modules/quicksearch/Bundle.properties
+++ b/spi.quicksearch/src/org/netbeans/modules/quicksearch/Bundle.properties
@@ -42,3 +42,4 @@
 CTL_QuickSearchAction=Quick Search
 QuickSearchComboBar.jLabel2.toolTipText=Quick search in system (Ctrl+I)
 MSG_DiscoverabilityHint=Search
+LBL_MoreResults=...
