Updated to use icon base and displayName

--- a/openide.awt/test/unit/src/org/openide/awt/TestBundle.properties
+++ b/openide.awt/test/unit/src/org/openide/awt/TestBundle.properties
@@ -38,6 +38,5 @@
 # made subject to such option by the copyright holder.
 
 
-actions/support/test/testIconIsCorrect.instance=Icon &Name Action
-actions/support/test/testContext.instance=Open
+Always=Icon &Name Action
 
