--- a/j2eeserver/src/org/netbeans/modules/j2ee/deployment/impl/Bundle.properties
+++ b/j2eeserver/src/org/netbeans/modules/j2ee/deployment/impl/Bundle.properties
@@ -197,4 +197,4 @@ in suspended state and thus cannot handle any requests.
 MSG_NoContents=No content for {0}
 MSG_DeploymentTimeoutExceeded=Deployment timeout has exceeded.
 
-MSG_DeployOnSave=Deploying ...
+MSG_DeployOnSave=Deploying {0}
