--- a/websvc.restlib/src/org/netbeans/modules/websvc/swdp/Bundle.properties
+++ b/websvc.restlib/src/org/netbeans/modules/websvc/swdp/Bundle.properties
@@ -41,8 +41,7 @@
 OpenIDE-Module-Name=RESTful Web Service Libraries
 OpenIDE-Module-Display-Category=Web Services
 OpenIDE-Module-Short-Description=Installs JAR files for JSR-311 API and reference implementation.
-OpenIDE-Module-Long-Description=For the list of included fixed bugs please check <A HREF="http://wiki.netbeans.org/NetBeans6.1PatchesInfo">http://wiki.netbeans.org/NetBeans6.1PatchesInfo</A> <BR> <BR> \
-Installs JAR files for JSR-311 API and reference implementation.
+OpenIDE-Module-Long-Description=Installs JAR files for JSR-311 API and reference implementation.
 # library display name
-restlib=Jersey (JSR-311 RI) Libraries
-restapi=RESTful Web Service API (JSR-311) Library
+restlib=Jersey 0.8 (JAX-RS RI)
+restapi=JAX-RS 0.8
